5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1831_1646.log
== TEST (2019-06-13 16:03:41) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

for i in vet:
	q = 0
	if (i <= 50):
		q += 1 
print(q)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:04:25) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 
print(q)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:08:13) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
sub = zeros(n , dtype=int)

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 
l = 0
for i in range(size(vet)):
	if (i <= 50):
		vet[i] = 
		
-- ERROR:
File "XXXX", line 14
    vet[i] = 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:08:22) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
sub = zeros(n , dtype=int)

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 
l = 0
for i in range(size(vet)):
	if (i <= 50):
		
-- ERROR:
File "XXXX", line 15
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:08:35) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
sub = zeros(n , dtype=int)

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 
l = 0
for i in range(size(vet)):
	if (i <= 50):
		print(l)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:09:43) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
sub = zeros(n , dtype=int)

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 
l = 0
for i in range(size(vet)):
	if (vet[i] <= 50):
		sub[0:] = i
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:11:30) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 
l = 0

sub = zeros(q, dtype=int)

for i in range(size(vet)):
	if (vet[i] <= 50):
		sub[0:] = i
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:11:50) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 
l = 0

sub = zeros(q, dtype=int)

for i in range(size(vet)):
	if (vet[i] <= 50):
		sub[0:] = i
		
print(sub)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:06) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 
l = 0

sub = zeros(q, dtype=int)

for i in range(size(vet)):
	
	if (vet[i] <= 50):
		sub[0] = + 1
		
print(i)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:14:36) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 
ele = 0

sub = zeros(q, dtype=int)

for i in range(size(vet)):
	
	if (vet[i] <= 50):
		sub[0] = + 1
		
print(sub)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:18:42) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 

saida = 0

sub = zeros(q, dtype=int)

for i in range(size(vet)):
	ent = 0
	if (vet[i] <= 50):		
		ent += 1
print(ent)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:19:20) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 

saida = 0

sub = zeros(q, dtype=int)

for i in range(size(vet)):
	ent = 0
	if (vet[i] <= 50):		
		saida += 1
print(ent)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:21:09) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 

saida = 0

sub = zeros(q, dtype=int)

for i in range(size(vet)):
	ent = 0
	if (vet[i] <= 50):		
		saida += 1
print(q)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:22:28) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 

saida = 0

sub = zeros(q, dtype=int)

for i in range(size(vet)):
	ent = 0
	if (i <= 50):
		ent +=1
		
print(q)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:00) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 

saida = 0

sub = zeros(q, dtype=int)

for i in range(size(vet)):
	ent = 0
	if (i <= 50):
		ent +=1
		
print(ent)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:17) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 

saida = 0

sub = zeros(q, dtype=int)

for i in range(size(vet)):
	ent = 0
	if (i <= 50):
		ent +=1
		
print(ent)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:29) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 

saida = 0

sub = zeros(q, dtype=int)

for i in range(size(vet)):
	ent = 0
	if (i <= 50):
		ent +=1
		
print(ent)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:05) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 

sa = 0

sub = zeros(q, dtype=int)

for i in range(size(vet)):
	ent = 0
	if (i <= 50):
		ent +=1
		sa += 1
print(sa)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:35) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 

sa = 0

sub = zeros(q, dtype=int)

for i in range(size(vet)):
	ent = 0
	if (i <= 50):
		ent +=1
		sa += 1
print(ent)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:25:12) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 

sa = 0

sub = zeros(q, dtype=int)

for i in range(size(vet)):
	ent = 0
	if (vet[i] <= 50):
		ent +=1
		sa += 1 
		
print(ent)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:14) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 

sa = 0

sub = zeros(q, dtype=int)

for i in range(size(vet)):
	ent = 0
	if (vet[i] <= 50):
		ent += 1 -1 -1
		sa += 1 
		
print(ent)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:28:03) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))

q = 0
for i in vet:
	
	if (i <= 50):
		q += 1 

sa = 0
sub = zeros(q, dtype=int)
for i in range(size(vet)):
	print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:33:26) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(q, dtype=int)
l = 0 
for i in vet :
	lo = 0
	if i <= 50:
		l = l + 1
		lo = lo + 1 - l
		print(l)
	


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:04) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(q, dtype=int)
l = 0 
for i in vet :
	lo = 0
	if i <= 50:
		l = l + 1
		lo = lo + 1 - 1
		print(l)
	


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:18) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(q, dtype=int)
l = 0 
for i in vet :
	lo = 0
	if i <= 50:
		l = l + 1
		lo = lo + 1 - 1
		print(lo)
	


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:27) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(q, dtype=int)
l = 0 
for i in vet :
	lo = 0
	if i <= 50:
		l = l + 1
		lo = lo + 1 - l
		print(lo)
	


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:37) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(q, dtype=int)
l = 0 
for i in vet :
	lo = 0
	if i <= 50:
		l = l + 1
		lo = lo + 1 - l
		print(l)
	


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:50) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(q, dtype=int)
l = 0 
for i in vet :
	lo = 0
	if i <= 50:
		l = l + 1 + lo
		lo = lo + 1 - l
		print(l)
	


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:19) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(q, dtype=int)
l = 0 
for i in vet :
	lo = 0
	if i <= 50:
		l = l + 1 + lo + 1
		lo = lo + 1 - l
		print(l)
	


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:27) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(q, dtype=int)
l = 0 
for i in vet :
	lo = 0
	if i <= 50:
		l = l + 1 +  1
		lo = lo + 1 - l
		print(l)
	


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:46) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(q, dtype=int)
l = 0 
for i in vet :
	lo = 0
	if i <= 50:
		l = l + 1 +  lo
		lo = lo + 1 - l
		print(l)
	


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:25) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(q, dtype=int)
l = 0 

for i in  range(size(vet)):
	o = 0
	if i <= 50:
		l = l + 1
		
		sub[]= l
		print(sub)
		


	


-- ERROR:
File "XXXX", line 17
    sub[]= l
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:33) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(q, dtype=int)
l = 0 

for i in  range(size(vet)):
	o = 0
	if i <= 50:
		l = l + 1
		
		sub[i]= l
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:44) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(q, dtype=int)
l = 0 

for i in  range(size(vet)):
	o = 0
	if i <= 50:
		l = l + 1
		
		sub[i]= l + 1
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:17) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(q, dtype=int)
l = 0 

for i in  range(size(vet)):
	o = 0
	if i <= 50:
		l = l + 1
		
		sub[o]= l + 1
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:49) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(q, dtype=int)
l = 0 

for i in  range(size(vet)):
	o = 0
	if i <= 50:
		l = l + 1
		
		sub[o]= o + 1
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:45) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(lol, dtype=int)
l = 0 

for i in  range(size(vet)):
	o = 0
	if i <= 50:
		l = l + 1
		sub[]= o + 1
		print(sub)
		


	


-- ERROR:
File "XXXX", line 17
    sub[]= o + 1
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:51) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(lol, dtype=int)
l = 0 

for i in  range(size(vet)):
	o = 0
	if i <= 50:
		l = l + 1
		sub[l]= o + 1
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:41:55) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(lol, dtype=int)
l = 0 

for i in  range(size(vet)):
	o = 0
	if i <= 50:
		sub[l] = o + 1
		l = l + 1
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:12) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(q, dtype=int)
l = 0 

for i in  range(size(vet)):
	o = 0
	if i <= 50:
		sub[l] = o + 1
		l = l + 1
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:33) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
		
sub = zeros(q, dtype=int)
l = 0 

for i in  range(size(vet)):
	oo = 0
	if i <= 50:
		sub[l] = oo + 1
		l = l + 1
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:43:14) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros(q, dtype=int)
l = 0 

for i in  range(size(vet)):
	oo = 0
	if i <= 50:
		sub[l] = oo + 1
		l = l + 1
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:16) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros(q, dtype=int)

l = 0 
for i in  range(size(vet)):
	bu = 0
	if i <= 50:
		sub[l] += 1
		l = l + 1
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:44) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros(0:, dtype=int)

l = 0 
for i in  range(size(vet)):
	bu = 0
	if i <= 50:
		sub[l] += 1
		l = l + 1
		
		print(sub)
		


	


-- ERROR:
File "XXXX", line 10
    sub = zeros(0:, dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:59) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q+1 , dtype=int)

l = 0 
for i in  range(size(vet)):
	bu = 0
	if i <= 50:
		sub[l] += 1
		l = l + 1
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:45:16) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q+1 , dtype=int)

l = 0 
for i in  range(size(vet)):
	bu = 0
	if i <= 50:
		sub[bu] += 1
		l = l + 1
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:45:23) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q+1 , dtype=int)

l = 0 
for i in  range(size(vet)):
	bu = 0
	if i <= 50:
		sub[bu] += 1
		l = l + 1
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:45:48) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q+1 , dtype=int)

l = 0 
for i in  range(size(vet)):
	bu = 0
	if i <= 50:
		sub[bu] += 1
		bu += 1
		l = l + 1
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:46:08) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q+1 , dtype=int)

l = 0 
for i in  range(size(vet)):
	bu = 0
	if i <= 50:
		sub[bu] += 1
		l += 1
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:46:25) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q+1 , dtype=int)

l = 0 
for i in  range(size(vet)):
	bu = 0
	if i <= 50:
		sub[l] += 1
		l += 1
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:46:50) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q+1 , dtype=int)

l = 0 
for i in  range(size(vet)):
	bu = 0
	if i <= 50:
		bu = bu + l
		sub[bu] += 1
		l += 1
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:47:24) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q+1 , dtype=int)

l = 0 
for i in  range(size(vet)):
	bu = 0
	if i <= 50:
		bu = bu + l
		sub[bu] =sub[bu] + 1
		l += 1
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:32) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q+1 , dtype=int)

l = 0 
for i in  range(size(vet)):
	bu = 0
	if i <= 50:
		bu = bu + l
		sub[bu] =sub[bu] + 1
		l += 1
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:25) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q+1 , dtype=int)

l = 0 
for i in  range(size(vet[q+1])):
	bu = 0
	if i <= 50:
		bu = bu + l
		sub[bu] =sub[bu] + 1
		l += 1
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:45) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q , dtype=int)

l = 0 
for i in  range(size(vet[q+1])):
	bu = 0
	if i <= 50:
		bu = bu + l
		sub[bu] =sub[bu] + 1
		l += 1
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:16) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q , dtype=int)

l = 0 
for i in  range(size(vet[q+1])):
	bu = 0
	if i <= 50:
		bu = bu + l
		sub[l] =sub[bu] + 1
		l += 1
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:56) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q , dtype=int)

l = 0 
for i in  range(size(vet[q+1])):
	bu = 0
	if i <= 50:
		bu = bu + l
		sub[l] =sub[l] + 1
		l += 1
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:33) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q , dtype=int)

l = 0 
for i in  range(size(vet[q+1])):
	bu = 0
	if i <= 50:
		bu = bu + l
		sub[l] =sub[l] + 1
		l += 1
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:56) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q , dtype=int)

l = 0 
for i in  range(size(vet[q+1])):
	bu = 0
	if i <= 50:
		bu = bu + l
		sub[l + 1] =sub[l] + 1
		l += 1
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:52:15) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q , dtype=int)

l = 0 
for i in  range(size(vet[q+1])):
	bu = 0
	if i <= 50:
		bu = bu + l
		sub[bu] =sub[l] + 1
		l += 1
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:52:25) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q , dtype=int)

l = 0 
for i in  range(size(vet[q+1])):
	bu = 0
	if i <= 50:
		bu = bu + l
		sub[bu] =sub[bu] + 1
		l += 1
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:52:45) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q , dtype=int)

l = 0 
for i in  range(size(vet[q+1])):
	bu = 0
	if i <= 50:
		
		sub[bu] =sub[bu] + 1
		l += 1
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:52:54) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q , dtype=int)

l = 0 
for i in  range(size(vet[q+1])):
	bu = 0
	if i <= 50:
		
		sub[bu] =sub[bu] + 1
		l += 1
		
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:12) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q , dtype=int)

l = 0 
for i in  range(size(vet[q+1])):
	bu = 0
	if i <= 50:
		
		sub[bu] =sub[bu] + 1
		l += 1
		bu = bu + l
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:27) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q , dtype=int)

l = 0 
for i in  range(size(vet[q+1])):
	bu = 0
	if i <= 50:
		
		sub[bu] =sub[bu] + 1
		l += 1
		bu = bu + l
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:57) 
-- CODE:
from  numpy import*

vet = array(eval(input("Vetor")))
lol = size(vet)
q = 0
for i in vet:	
	if (i <= 50):
		q += 1 
print(q)		
sub = zeros( q , dtype=int)

l = 0 
for i in  range(size(vet[q+1])):
	bu = 0
	if i <= 50:
		
		sub[l] =sub[l] + l
		l += 1
		bu = bu + l
		
		
		print(sub)
		


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
